fix the website on mobile devices

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,3 +1,5 @@
+@charset "UTF-8"
+
 // 顏色管理
 $black_color: #334252
 $blue_color: #3dc7be
@@ -6,7 +8,7 @@ $grey_color: #f2f2f2
 $orange_color: #f75940
 
 *
-  // border: solid 1px red
+  border: solid 1px red
   font-family: "微軟正黑體"
   color: $black_color
   position: relative
@@ -97,7 +99,6 @@ section#map_area
   display: none
 #map
   width: 100%
-  min-width: 280px
   height: 450px
 
 // 災情資訊
